WIP - fixes question overflow

--- a/src/styles/_main.sass
+++ b/src/styles/_main.sass
@@ -13,7 +13,7 @@ body
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
   text-align: center
-  background: $light
+  background: $background
 
 .divider
   position: relative
@@ -21,7 +21,7 @@ body
     content: ""
     position: absolute
     left: 36%
-    bottom: 0px
+    bottom: 0
     width: 28%
     height: 1px
     background: $dark
